--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- Add CSS File -->
-  <link rel="stylesheet" href="src/CSS/styles.css">
-  <link rel="stylesheet" href="src/CSS/responsive.css">
-  <link rel="stylesheet" href="src/CSS/lightbox.css">
+  <link rel="stylesheet" href="src/styles.css">
+  <link rel="stylesheet" href="src/responsive.css">
+  <link rel="stylesheet" href="src/lightbox.css">
 
 
   <!-- Fontawesome CDN  -->
@@ -34,7 +34,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#">
-            <img src="assets/logo.png" alt="">
+            <img src="assets/logo.png" alt="logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,16 +46,16 @@
                 <a class="nav-link active" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="pages/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="product.html">Product</a>
+                <a class="nav-link" href="pages/product.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="gallery.html">Gallery</a>
+                <a class="nav-link " href="pages/gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="contect.html">Contact US</a>
+                <a class="nav-link " href="pages/contect.html">Contact US</a>
               </li>
             </ul>
             <div class="header-right">
@@ -468,7 +468,7 @@
     crossorigin="anonymous"></script>
 
   <!-- Script FIle -->
-  <script src="src/JS/script.js"></script>
-  <script src="src/JS/lightbox.js"></script>
+  <script src="src/script.js"></script>
+  <script src="src/lightbox.js"></script>
 </body>
 </html>
