--- a/pages/contect.html
+++ b/pages/contect.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallery</title>
+  <title>Contact</title>
 
-  <link rel="shortcut icon" href="assets/favicon.avif" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.avif" type="image/x-icon">
 
   <!-- Bootstrap CDN  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- Add CSS File -->
-  <link rel="stylesheet" href="src/CSS/styles.css">
-  <link rel="stylesheet" href="src/CSS/responsive.css">
-  <link rel="stylesheet" href="src/CSS/lightbox.css">
+  <link rel="stylesheet" href="../src/styles.css">
+  <link rel="stylesheet" href="../src/responsive.css">
+  <link rel="stylesheet" href="../src/lightbox.css">
 
 
   <!-- Fontawesome CDN  -->
@@ -25,15 +25,15 @@
 
 </head>
 
-<body class="gallery">
+<body class="contact">
 
-  <!-- Navbar Section -->
+  <!-- Navbar section -->
   <header id="nav-section">
     <div class="header">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#">
-            <img src="assets/logo.png" alt="">
+            <img src="../assets/logo.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,10 +51,10 @@
                 <a class="nav-link" href="product.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="gallery.html">Gallery</a>
+                <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="contect.html">Contact US</a>
+                <a class="nav-link active" href="contect.html">Contact US</a>
               </li>
             </ul>
             <div class="header-right">
@@ -73,74 +73,71 @@
   <section class="banner_section">
     <div class="container">
       <div class="banner-content">
-        <h1>Gallery</h1>
+        <h1>Contact</h1>
       </div>
     </div>
   </section>
 
-  <!-- Gallery Section -->
-  <section class="gallery-section">
+  <!-- Contact Section  -->
+  <section class="contect-section">
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-12 text-center pb-5">
-          <h2 class="section-title">Our Gallery</h2>
+          <h2 class="section-title">Get In Touch</h2>
           <p class="section-subtitle">The Passage Experienced A Sugre In Popularity During The 1960s When Again During
-            The 90s As Desktop Publisher </p>
+            The 90s As Desktop Publisher</p>
         </div>
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-1.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-1.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
+        <div class="col-12 contact-form">
+          <div class="row">
+            <div class="col-lg-7 mb-5">
+              <form class="row g-3">
+                <div class="col-md-6 mb-4">
+                  <input type="text" class="form-control" placeholder="Your Name *" required="">
+                </div>
+                <div class="col-md-6 mb-4">
+                  <input type="email" class="form-control" placeholder="Your Email *" required="">
+                </div>
+                <div class="col-md-6 mb-4">
+                  <input type="text" class="form-control" placeholder="Your Address *" required="">
+                </div>
+                <div class="col-md-6 mb-4">
+                  <input type="number" class="form-control" placeholder="Your Phone *" required="">
+                </div>
+                <div >
+                  <input class="form-control" placeholder="your Message">
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn main-btn">Send Message</button>
+                </div>
+              </form>
+            </div>
+            <div class="col-lg-5 mb-5">
+              <div class="content-box ms-sm-5">
+                <ul class="info-box clearfix">
+                  <li>
+                    <i class="fas fa-phone-alt"></i>
+                    <p>Any Questions? Call us</p>
+                    <div>
+                      <a href="#">+91 123 123 1234</a>
+                    </div>
+                  </li>
+                  <li>
+                    <i class="far fa-envelope-open"></i>
+                    <p>Any Questions? Email us</p>
+                    <div>
+                      <a href="#">info@example.com</a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-2.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-2.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
-        </div>
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-3.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-3.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
-        </div>
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-4.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-4.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
-        </div>
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-6.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-6.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
-        </div>
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-7.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-7.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
-        </div>  
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-2.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-2.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
-        </div>  
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-4.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-4.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
-        </div>  
-        <div class="col-sm-6 col-lg-4 mb-4">
-          <a href="assets/gallery/g-8.jpg" data-lightbox="image" data-title="Lamon">
-            <img src="assets/gallery/g-8.jpg" alt="img1" class="img-fluid rounded-3">
-          </a>
-        </div>  
-        
-        
       </div>
-    </div>
   </section>
 
 
-
-  <!-- Footer Section -->
+  <!-- Footer Section  -->
   <section class="footer-section mt-3 mt-md-0">
     <div class="container px-5 px-lg-0">
       <div class="row">
