--- a/pages/product.html
+++ b/pages/product.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>Product</title>
 
-  <link rel="shortcut icon" href="assets/favicon.avif" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.avif" type="image/x-icon">
 
   <!-- Bootstrap CDN  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- Add CSS File -->
-  <link rel="stylesheet" href="src/CSS/styles.css">
-  <link rel="stylesheet" href="src/CSS/responsive.css">
-  <link rel="stylesheet" href="src/CSS/lightbox.css">
+  <link rel="stylesheet" href="../src/styles.css">
+  <link rel="stylesheet" href="../src/responsive.css">
+  <link rel="stylesheet" href="../src/lightbox.css">
 
 
   <!-- Fontawesome CDN  -->
@@ -25,15 +25,15 @@
 
 </head>
 
-<body class="contact">
+<body class="product">
 
-  <!-- Navbar section -->
+  <!-- Nav Section -->
   <header id="nav-section">
     <div class="header">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand" href="#">
-            <img src="assets/logo.png" alt="">
+            <img src="../assets/logo.png" alt="logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,16 +45,16 @@
                 <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="../pages/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="product.html">Product</a>
+                <a class="nav-link active" href="../pages/product.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="gallery.html">Gallery</a>
+                <a class="nav-link " href="../pages/gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="contect.html">Contact US</a>
+                <a class="nav-link " href="../pages/contect.html">Contact US</a>
               </li>
             </ul>
             <div class="header-right">
@@ -69,75 +69,83 @@
     </div>
   </header>
 
-  <!-- Banner Section -->
+  <!-- Banner-section -->
   <section class="banner_section">
     <div class="container">
       <div class="banner-content">
-        <h1>Contact</h1>
+        <h1>Product</h1>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section  -->
-  <section class="contect-section">
+  <!-- Product Section -->
+  <div class="product_section">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12 text-center pb-5">
-          <h2 class="section-title">Get In Touch</h2>
-          <p class="section-subtitle">The Passage Experienced A Sugre In Popularity During The 1960s When Again During
-            The 90s As Desktop Publisher</p>
+        <div class="col-12 text-center pb-5 mt-5">
+          <h2 class="section-title">Our Best Seller Product</h2>
+          <p class="section-subtitle">The Passage Experienced A Surge In Popularity During 1960s When Again During The
+            90s As Desktop Publisher</p>
         </div>
-        <div class="col-12 contact-form">
-          <div class="row">
-            <div class="col-lg-7 mb-5">
-              <form class="row g-3">
-                <div class="col-md-6 mb-4">
-                  <input type="text" class="form-control" placeholder="Your Name *" required="">
-                </div>
-                <div class="col-md-6 mb-4">
-                  <input type="email" class="form-control" placeholder="Your Email *" required="">
-                </div>
-                <div class="col-md-6 mb-4">
-                  <input type="text" class="form-control" placeholder="Your Address *" required="">
-                </div>
-                <div class="col-md-6 mb-4">
-                  <input type="number" class="form-control" placeholder="Your Phone *" required="">
-                </div>
-                <div >
-                  <input class="form-control" placeholder="your Message">
-                </div>
-                <div class="col-12">
-                  <button type="submit" class="btn main-btn">Send Message</button>
-                </div>
-              </form>
-            </div>
-            <div class="col-lg-5 mb-5">
-              <div class="content-box ms-sm-5">
-                <ul class="info-box clearfix">
-                  <li>
-                    <i class="fas fa-phone-alt"></i>
-                    <p>Any Questions? Call us</p>
-                    <div>
-                      <a href="#">+91 123 123 1234</a>
-                    </div>
-                  </li>
-                  <li>
-                    <i class="far fa-envelope-open"></i>
-                    <p>Any Questions? Email us</p>
-                    <div>
-                      <a href="#">info@example.com</a>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
+      </div>
+      <div class="row align-items-center py-5">
+        <div class="col-xl-5 col-sm-6 col-12 mb-5">
+          <img src="../assets/products/fresh-fruits1.jpg" alt="fresh-fruits1" class="img-fluid ">
+        </div>
+        <div class="col-xl-7 col-sm-6 col-12 mb-5">
+          <div class="product-content">
+            <h2>Pure Lemon Jusice</h2>
+          </div>
+          <div class="product-details">
+            <p>Ready to use Pure, Natural, and Fresh Lemon Juice concentrate in lemon shape bottle of 14
+              Lemons & 30 Lemons, No need to Buy costly Lemons Anymore, Then cut and Squeeze & store
+              them, Just Bring!
+            </p>
+            <p>Easy to use and easy to carry, just squeeze it to use it. 99.99% Lemon juice concentrate,
+              No added sugar or anything.
+            </p>
+            <h4 class="my-4">Uses of Nimboo Ras</h4>
+            <p>Use in all your cooking, use in all types of drinks, with Green Tea, with Warm Water.</p>
+            <h4 class="my-4">Benifites Of Nimboo Ras</h4>
+            <p>Reduce stress, Boost the Immune system, help prevent kidney stones, Fight cancer Cells,
+              Natural antiseptic, Clean & clear skin, white Teeth, Stop Dandruff, Aid in digestion,
+              promote weight loss and many more...</p>
+
+            <a href="#" class="btn main-btn">Buy Now</a>
           </div>
         </div>
       </div>
-  </section>
+      <div class="row align-items-center py-5">
+        <div class="col-xl-7 col-sm-6 col-12 mb-5 order-2 order-lg-1">
+          <div class="product-content">
+            <h2>Pure Lemon Jusice</h2>
+          </div>
+          <div class="product-details">
+            <p>Ready to use Pure, Natural, and Fresh Lemon Juice concentrate in lemon shape bottle of 14
+              Lemons & 30 Lemons, No need to Buy costly Lemons Anymore, Then cut and Squeeze & store
+              them, Just Bring!
+            </p>
+            <p>Easy to use and easy to carry, just squeeze it to use it. 99.99% Lemon juice concentrate,
+              No added sugar or anything.
+            </p>
+            <h4>Uses of Nimboo Ras</h4>
+            <p>Use in all your cooking, use in all types of drinks, with Green Tea, with Warm Water.</p>
+            <h4>Benifites Of Nimboo Ras</h4>
+            <p>Reduce stress, Boost the Immune system, help prevent kidney stones, Fight cancer Cells,
+              Natural antiseptic, Clean & clear skin, white Teeth, Stop Dandruff, Aid in digestion,
+              promote weight loss and many more...</p>
 
+            <a href="#" class="btn main-btn">Buy Now</a>
+          </div>
+        </div>
+        <div class="col-xl-5 col-sm-6 col-12 mb-5 order-1 order-lg-2">
+          <img src="../assets/products/fresh-fruits2.jpg" alt="fresh-fruits2" class="img-fluid ">
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <!-- Footer Section  -->
+  <!-- Footer Section -->
   <section class="footer-section mt-3 mt-md-0">
     <div class="container px-5 px-lg-0">
       <div class="row">
@@ -195,6 +203,7 @@
     </div>
   </section>
 
+
   <!-- Jquery cdn -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -207,8 +216,8 @@
     crossorigin="anonymous"></script>
 
   <!-- Script FIle -->
-  <script src="src/JS/script.js"></script>
-  <script src="src/JS/lightbox.js"></script>
+  <script src="../src/script.js"></script>
+  <script src="../src/lightbox.js"></script>
 </body>
 
 </html>
