--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h3>Fresh & Natural Farm Food</h3>
                 <p>The readable content of a page when looking at its layout point of using of letters,
                   as opposed.</p>
-                <a href="#" class="btn main-btn">All Product</a>
+                <a href="./pages/product.html" class="btn main-btn">All Product</a>
               </div>
             </div>
           </div>
@@ -93,7 +93,7 @@
                 <h3>Fresh & Natural Farm Food</h3>
                 <p>The readable content of a page when looking at its layout point of using of letters,
                   as opposed.</p>
-                <a href="#" class="btn main-btn">All Product</a>
+                <a href="./pages/product.html" class="btn main-btn">All Product</a>
               </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus doloribus repellat eaque obcaecati velit
                 rem corrupti. Natus assumenda quasi quam.</p>
 
-              <a href="#" class="btn main-btn">Read More</a>
+              <a href="./pages/about.html" class="btn main-btn">Read More</a>
             </div>
           </div>
         </div>
@@ -218,7 +218,7 @@
               <span>$70 KG</span>
             </div>
             <div class="product-details">
-              <a href="#" class="btn main-btn">View Product</a>
+              <a href="./pages/product.html" class="btn main-btn">View Product</a>
             </div>
           </div>
         </div>
@@ -232,7 +232,7 @@
               <span>$70 KG</span>
             </div>
             <div class="product-details">
-              <a href="#" class="btn main-btn">View Product</a>
+              <a href="./pages/product.html" class="btn main-btn">View Product</a>
             </div>
           </div>
         </div>
@@ -246,7 +246,7 @@
               <span>$70 KG</span>
             </div>
             <div class="product-details">
-              <a href="#" class="btn main-btn">View Product</a>
+              <a href="./pages/product.html" class="btn main-btn">View Product</a>
             </div>
           </div>
         </div>
@@ -260,7 +260,7 @@
               <span>$70 KG</span>
             </div>
             <div class="product-details">
-              <a href="#" class="btn main-btn">View Product</a>
+              <a href="./pages/product.html" class="btn main-btn">View Product</a>
             </div>
           </div>
         </div>
