--- a/pages/404.html
+++ b/pages/404.html
@@ -1,46 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About US</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Error</title>
 
-    <link rel="shortcut icon" href="assets/favicon.avif" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.avif" type="image/x-icon">
 
-    <!-- Bootstrap CDN  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  
-    <!-- Add CSS File -->
-    <link rel="stylesheet" href="src/CSS/styles.css">
-    <link rel="stylesheet" href="src/CSS/responsive.css">
-    <link rel="stylesheet" href="src/CSS/lightbox.css">
-  
-  
-    <!-- Fontawesome CDN  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+  <!-- Bootstrap CDN  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <!-- Add CSS File -->
+  <link rel="stylesheet" href="../src/styles.css">
+  <link rel="stylesheet" href="../src/responsive.css">
+  <link rel="stylesheet" href="../src/lightbox.css">
+
+
+  <!-- Fontawesome CDN  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
-<body>
-    
+
+<body class="distributors">
+
+  <!-- Navbar Section -->
+  <header id="nav-section">
+    <div class="header">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg">
+          <a class="navbar-brand" href="#">
+            <img src="../assets/logo.png" alt="logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars-staggered navbar-toggler-icon"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/product.html">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="../pages/gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="../pages/contect.html">Contact US</a>
+              </li>
+            </ul>
+            <div class="header-right">
+              <div class="text-lg-end">
+                <span>Call Us!</span>
+                <div class="phone-no">+91 8003155718</div>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <!-- banner Section -->
+  <section class="banner_section">
+    <div class="container">
+      <div class="banner-content">
+        <h1>404 Error
+
+        </h1>
+      </div>
+    </div>
+  </section>
+
+  <!-- inquiry section  -->
+  <div class="contect-section">
+    <div class="container">
+      <div class="row align-items-center flex-column flex-lg-row-reverse">
+        <div class="col-lg-7 mb-5 mb-lg-0">
+          <div class="error-img">
+            <img src="../assets/error_404.png" alt="error">
+          </div>
+        </div>
+        <div class="col-lg-5 text-center pb-5 text-lg-start">
+          <h2 class="section-title">Opps..... This page is not found</h2>
+          <p class="text-black">Botanically, the strawbarry fruits is considered an "accessory fruits" and not a ture barry. The flesh consits of the greatly nlarged flower receptable.</p>
+          <a  href="../index.html" class="btn main-btn">Back To Home</a>
+        </div>
+      </div>
+    </div>
+   </div> 
+
+
+  <!-- Footer Section -->
+  <section class="footer-section mt-3 mt-md-0">
+    <div class="container px-5 px-lg-0">
+      <div class="row">
+        <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+          <h5>TazZA</h5>
+          <p class="mb-4 ps-0 company-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+            dignissim erat ut laoreet
+            pharetra....</p>
+          <div class="contact-info">
+            <ul class="list-unstyled">
+              <li><a href="#"><i class="fa fa-home me-3"></i> No. 96, South City, London</a></li>
+              <li><a href="#"><i class="fa fa-phone me-3"></i>+1 222 3333</a></li>
+              <li><a href="#"><i class="fa fa-envelope me-3"></i>info@example.com</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+          <h5>Customer Support</h5>
+          <ul class="link-widget p-0">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Product Returns</a></li>
+            <li><a href="#">Wholesale Policy</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+          <h5>Quick Links</h5>
+          <ul class="link-widget p-0">
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Term Of Use</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+          <h5>Newsletter</h5>
+          <div class="form-group mb-4">
+            <input type="email" class="form-control bg-transparent" placeholder="Enter Your Email Here">
+            <button type="submit" class="btn main-btn">Subscribe</button>
+          </div>
+          <h5>Stay Connected</h5>
+          <ul class="social-network d-flex align-items-center p-0">
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid copyright-section">
+      <p>Copyright <a href="#">© CODE4EDUCATION.</a> All Rights Reserved</p>
+    </div>
+  </section>
 
 
 
-    <!-- Jquery cdn -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Jquery cdn -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <!-- Bootstrap scipt CDN  -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"></script>
-  
-    <!-- Script FIle -->
-    <script src="src/JS/script.js"></script>
-    <script src="src/JS/lightbox.js"></script>
+  <!-- Bootstrap scipt CDN  -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
+  <!-- Script FIle -->
+  <script src="../src/script.js"></script>
+  <script src="../src/lightbox.js"></script>
 </body>
+
 </html>
